added logo images:

--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
     <link href='https://fonts.googleapis.com/css?family=Kaushan+Script' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Droid+Serif:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700' rel='stylesheet' type='text/css'>
+    <!-- devicon icons -->
+    <link rel="stylesheet" href="https://cdn.rawgit.com/konpa/devicon/89f2f44ba07ea3fff7e561c2142813b278c2d6c6/devicon.min.css">
+
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -96,6 +99,7 @@
 <!--                     <h3 class="section-subheading text-muted">I like to build things that make people's lives better.</h3> -->
                 </div>
             </div>
+            <br>
             <div class="row">
                 <div class="col-md-4 col-sm-6 portfolio-item">
                     <a href="#portfolioModal1" class="portfolio-link" data-toggle="modal">
@@ -218,48 +222,198 @@
             <div class="row text-center">
                 <div class="col-lg-10 col-lg-offset-1">
                     <h2>Technical Skills</h2>
-                    <hr class="small">
+                   <!--  <hr class="small"> -->
+                   <br>
                     <div class="row">
                         <div class="col-md-3 col-sm-6">
                             <div class="service-item">
                                 <span class="fa-stack fa-4x">
-                                <i class="fa fa-circle fa-stack-2x"></i>
-                                <i class="fa fa-cloud fa-stack-1x text-primary"></i>
+                               <!--  <i class="fa fa-circle fa-stack-2x"></i> -->
+                                <!-- <i class= "fa-stack-1x text-primary"></i> -->
+                                <img src= "img/logos/html.png"></img>
                             </span>
                                 <h4>
                                     <strong>HTML</strong>
                                 </h4>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-                                <a href="#" class="btn btn-light">Learn More</a>
                             </div>
                         </div>
                         <div class="col-md-3 col-sm-6">
+                            <div class="service-item">
+                                <span class="fa-stack fa-4x">
+                                <!-- <i class="fa fa-circle fa-stack-2x"></i> -->
+                                <img src= "img/logos/css2.png"></img>
+                            </span>
+                                <h4>
+                                    <strong>CSS</strong>
+                                </h4>
+                            </div>
+                        </div>
+                        <div class="col-md-3 col-sm-6">
+                            <div class="service-item">
+                                <span class="fa-stack fa-4x">
+                                <img src= "img/logos/javascript.png"></img>
+                                <!-- <i class="fa fa-circle fa-stack-2x"></i> -->
+                                <!-- <i class="fa fa-flask fa-stack-1x text-primary"></i> -->
+                            </span>
+                                <h4>
+                                    <strong>JavaScript</strong>
+                                </h4>
+                            </div>
+                        </div>
+                        <div class="col-md-3 col-sm-6">
+                            <div class="service-item">
+                                <span class="fa-stack fa-4x">
+                                <!-- <i class="fa fa-circle fa-stack-2x"></i> -->
+                                <img src= "img/logos/jquery.png"></img>
+                               <!--  <i class="fa fa-shield fa-stack-1x text-primary"></i> -->
+                            </span>
+                                <h4>
+                                    <strong>JQuery</strong>
+                                </h4>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- Row 2 -->
+                    <div class="row">
+                        <div class="col-md-3 col-sm-6">
+                            <div class="service-item">
+                                <span class="fa-stack fa-4x">
+                               <!--  <i class="fa fa-circle fa-stack-2x"></i> -->
+                               <img src= "img/logos/postgres.png"></img>
+                              <!--   <i class="fa fa-cloud fa-stack-1x text-primary"></i> -->
+                            </span>
+                                <h4>
+                                    <strong>PostgreSQL</strong>
+                                </h4>
+                            </div>
+                        </div>
+                        <div class="col-md-3 col-sm-6">
+                            <div class="service-item">
+                                <span class="fa-stack fa-4x">
+                                <!-- <i class="fa fa-circle fa-stack-2x"></i> -->
+                                <img src= "img/logos/node.png"></img>
+                               <!--  <i class="fa fa-compass fa-stack-1x text-primary"></i> -->
+                            </span>
+                                <h4>
+                                    <strong>Node</strong>
+                                </h4>
+                            </div>
+                        </div>
+                        <div class="col-md-3 col-sm-6">
+                            <div class="service-item">
+                                <span class="fa-stack fa-4x">
+                               <!--  <i class="fa fa-circle fa-stack-2x"></i> -->
+                               <!-- <img src= "img/logos/express.png"></img> -->
+                                <!-- <i class="fa fa-flask fa-stack-1x text-primary"></i> -->
+                            </span>
+                                <h4>
+                                    <strong>Express</strong>
+                                </h4>
+                            </div>
+                        </div>
+                        <div class="col-md-3 col-sm-6">
+                            <div class="service-item">
+                                <span class="fa-stack fa-4x">
+                               <!--  <i class="fa fa-circle fa-stack-2x"></i> -->
+                                <!-- <img src= "img/logos/express.png"></img> -->
+                               <!--  <i class="fa fa-shield fa-stack-1x text-primary"></i> -->
+                            </span>
+                                <h4>
+                                    <strong>AJAX</strong>
+                                </h4>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!--Row 3  -->
+                    <div class="row">
+                        <div class="col-md-3 col-sm-6">
+                            <div class="service-item">
+                                <span class="fa-stack fa-4x">
+                               <!--  <i class="fa fa-circle fa-stack-2x"></i> -->
+                               <img src= "img/logos/bootstrap.png"></img>
+                              <!--   <i class="fa fa-cloud fa-stack-1x text-primary"></i> -->
+                            </span>
+                                <h4>
+                                    <strong>Bootstrap</strong>
+                                </h4>
+                            </div>
+                        </div>
+                        <div class="col-md-3 col-sm-6">
+                            <div class="service-item">
+                                <span class="fa-stack fa-4x">
+                                <!-- <i class="fa fa-circle fa-stack-2x"></i> -->
+                                <img src= "img/logos/gulp.png"></img>
+                             <!--    <i class="fa fa-compass fa-stack-1x text-primary"></i> -->
+                            </span>
+                                <h4>
+                                    <strong>Gulp</strong>
+                                </h4>
+                            </div>
+                        </div>
+                        <div class="col-md-3 col-sm-6">
+                            <div class="service-item">
+                                <span class="fa-stack fa-4x">
+                                <!-- <i class="fa fa-circle fa-stack-2x"></i> -->
+                                 <img src= "img/logos/ember.png"></img>
+                                <!-- <i class="fa fa-flask fa-stack-1x text-primary"></i> -->
+                            </span>
+                                <h4>
+                                    <strong>Ember</strong>
+                                </h4>
+                            </div>
+                        </div>
+                        <div class="col-md-3 col-sm-6">
+                            <div class="service-item">
+                                <span class="fa-stack fa-4x">
+                                <!-- <i class="fa fa-circle fa-stack-2x"></i> -->
+                                <img src= "img/logos/backbone.png"></img>
+                            </span>
+                                <h4>
+                                    <strong>Backbone</strong>
+                                </h4>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- Row 4 -->
+                                        <!--Row 3  -->
+                    <div class="row">
+                        <div class="col-md-3 col-sm-6">
+                            <div class="service-item">
+                                <span class="fa-stack fa-4x">
+                                <!-- <i class="fa fa-circle fa-stack-2x"></i> -->
+                                 <img src= "img/logos/api.png"></img>
+                                <!-- <i class="fa fa-github fa-stack-1x text-primary"></i> -->
+                            </span>
+                                <h4>
+                                    <strong>API Manipulation</strong>
+                                </h4>
+                            </div>
+                        </div>
+<!--                         <div class="col-md-3 col-sm-6">
                             <div class="service-item">
                                 <span class="fa-stack fa-4x">
                                 <i class="fa fa-circle fa-stack-2x"></i>
                                 <i class="fa fa-compass fa-stack-1x text-primary"></i>
                             </span>
                                 <h4>
-                                    <strong>CSS</strong>
+                                    <strong>Gulp</strong>
                                 </h4>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-                                <a href="#" class="btn btn-light">Learn More</a>
                             </div>
-                        </div>
-                        <div class="col-md-3 col-sm-6">
+                        </div> -->
+<!--                         <div class="col-md-3 col-sm-6">
                             <div class="service-item">
                                 <span class="fa-stack fa-4x">
                                 <i class="fa fa-circle fa-stack-2x"></i>
                                 <i class="fa fa-flask fa-stack-1x text-primary"></i>
                             </span>
                                 <h4>
-                                    <strong>JavaScript</strong>
+                                    <strong>Ember</strong>
                                 </h4>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-                                <a href="#" class="btn btn-light">Learn More</a>
                             </div>
-                        </div>
-                        <div class="col-md-3 col-sm-6">
+                        </div> -->
+<!--                         <div class="col-md-3 col-sm-6">
                             <div class="service-item">
                                 <span class="fa-stack fa-4x">
                                 <i class="fa fa-circle fa-stack-2x"></i>
@@ -268,67 +422,9 @@
                                 <h4>
                                     <strong>Backbone</strong>
                                 </h4>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-                                <a href="#" class="btn btn-light">Learn More</a>
                             </div>
-                        </div>
+                        </div> -->
                     </div>
-                    <!-- /.row (nested) -->
-                    <div class="row">
-                        <div class="col-md-3 col-sm-6">
-                            <div class="service-item">
-                                <span class="fa-stack fa-4x">
-                                <i class="fa fa-circle fa-stack-2x"></i>
-                                <i class="fa fa-cloud fa-stack-1x text-primary"></i>
-                            </span>
-                                <h4>
-                                    <strong>Ember</strong>
-                                </h4>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-                                <a href="#" class="btn btn-light">Learn More</a>
-                            </div>
-                        </div>
-                        <div class="col-md-3 col-sm-6">
-                            <div class="service-item">
-                                <span class="fa-stack fa-4x">
-                                <i class="fa fa-circle fa-stack-2x"></i>
-                                <i class="fa fa-compass fa-stack-1x text-primary"></i>
-                            </span>
-                                <h4>
-                                    <strong>Git</strong>
-                                </h4>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-                                <a href="#" class="btn btn-light">Learn More</a>
-                            </div>
-                        </div>
-                        <div class="col-md-3 col-sm-6">
-                            <div class="service-item">
-                                <span class="fa-stack fa-4x">
-                                <i class="fa fa-circle fa-stack-2x"></i>
-                                <i class="fa fa-flask fa-stack-1x text-primary"></i>
-                            </span>
-                                <h4>
-                                    <strong>Ajax</strong>
-                                </h4>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-                                <a href="#" class="btn btn-light">Learn More</a>
-                            </div>
-                        </div>
-                        <div class="col-md-3 col-sm-6">
-                            <div class="service-item">
-                                <span class="fa-stack fa-4x">
-                                <i class="fa fa-circle fa-stack-2x"></i>
-                                <i class="fa fa-shield fa-stack-1x text-primary"></i>
-                            </span>
-                                <h4>
-                                    <strong>SQL</strong>
-                                </h4>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-                                <a href="#" class="btn btn-light">Learn More</a>
-                            </div>
-                        </div>
-                    </div>
-
                 </div>
                 <!-- /.col-lg-10 -->
             </div>
@@ -344,6 +440,7 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">Resume</h2>
+                    <br>
                    <!--  <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3> -->
                 </div>
             </div>
@@ -388,6 +485,7 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading"><a href="#"></a>Contact Me</h2>
+                    <br>
                     <!-- <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3> -->
                 </div>
             </div>
