--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
 
     <!-- Skills -->
     <!-- The circle icons use Font Awesome's stacked icon classes. For more information, visit http://fontawesome.io/examples/ -->
-    <section id="skills" class="services bg-primary">
+    <section id="skills" class="services">
         <div class="container">
             <div class="row text-center">
                 <div class="col-lg-10 col-lg-offset-1">
@@ -304,11 +304,11 @@
                             <div class="service-item">
                                 <span class="fa-stack fa-4x">
                                <!--  <i class="fa fa-circle fa-stack-2x"></i> -->
-                               <!-- <img src= "img/logos/express.png"></img> -->
+                               <img src= "img/logos/github.png"></img>
                                 <!-- <i class="fa fa-flask fa-stack-1x text-primary"></i> -->
                             </span>
                                 <h4>
-                                    <strong>Express</strong>
+                                    <strong>Git</strong>
                                 </h4>
                             </div>
                         </div>
@@ -316,7 +316,7 @@
                             <div class="service-item">
                                 <span class="fa-stack fa-4x">
                                <!--  <i class="fa fa-circle fa-stack-2x"></i> -->
-                                <!-- <img src= "img/logos/express.png"></img> -->
+                                <img src= "img/logos/ajax.png"></img>
                                <!--  <i class="fa fa-shield fa-stack-1x text-primary"></i> -->
                             </span>
                                 <h4>
