--- a/index.html
+++ b/index.html
@@ -460,21 +460,21 @@
                 </div>
                 <div class="col-lg-6 text-left Experience">
                     <h4><b>Experience</b></h4>
-                    <p><b><u>Portland Code School (August 2014-Present)</u></b>
-                    <p>Full stack JavaScript TA</p>
+                    <p><b><u>Portland Code School</u></b>
+                    <p>Full stack JavaScript TA (July 2015-Present)</p>
                     <ul>
                       <li>Facilitated the learning of Full Stack JavaScript among two different classes of students</li>
-                      <li>Created customized JS problems in order to deepend students understanding of class material</li>
+                      <li>Created customized JS problems in order to deepen students understanding of class material</li>
                       <li>Explained complex JavaScript problems to students during office hours</li>
                       <li>Collaborated with teaching staff to ensure that students were understanding concepts in a timely manner </li>
                     </ul>
                     <p><b><u>Young Creative Space</u></b>
                     <p>Freelance Web Development (December 2014-August 2015)</p>
                     <ul>
-                      <li>Created websites and applications from the ground up.</li>
-                      <li>Manipulated API’s to display functionality from various social media sites. </li>
-                      <li>Communicated with clients to assure that projects met expectations and were completed in a timely manner.</li>
-                      <li>Engaged in continued education in order to sharpen current skills and to continue to learn.</li>
+                      <li>Created websites and applications from the ground up</li>
+                      <li>Manipulated API’s to display functionality from various social media sites </li>
+                      <li>Communicated with clients to assure that projects met expectations and were completed in a timely manner</li>
+                      <li>Engaged in continued education in order to sharpen current skills and to continue to learn</li>
                     </ul>
                 </div>
             </div>
