--- a/index.html
+++ b/index.html
@@ -85,6 +85,7 @@
         <div class="container">
             <div class="intro-text">
                 <div class="intro-lead-in">Stephen Jay Young</div>
+                   <img class= "img-circle img-responsive center-block" id="ProfilePicture" src="SitePic2.jpeg" alt="profile picture" </a> </a>
                 <div class="intro-heading"><em>Web Developer</em></div>
             </div>
         </div>
