updated url for a portfolio project

--- a/index.html
+++ b/index.html
@@ -571,7 +571,7 @@
                             <a href="http://stephenjayyoung.github.io/Iceland">
                             <img class="img-responsive img-centered" src="img/Iceland.JPG" alt=""></a>
                             <p>This website uses the Jekyll template "Grid Gallery," with two additional pages. The first page, entitled "Stories," utilizes modified code from a Bootstrap template, and the second page, entitled "#YoungBoyzInIceland," utilizes the Instagram API to display all of the photos on Instagram that use the hashtag #YoungBoyzInIceland.</p>
-                            <p><b>Check it out here: <a href="http://stephenjayyoung.github.io/Iceland"> http://stephenjayyoung.github.io/Iceland</b></a>
+                            <p><b>Check it out here: <a href="http://www.youngboyziniceland.com/"> http://stephenjayyoung.github.io/Iceland</b></a>
                             </p>
                             <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close Project</button>
                         </div>
