--- a/index.html
+++ b/index.html
@@ -485,10 +485,37 @@
     <section id="contact">
         <div class="container">
             <div class="row">
-                <div class="col-lg-12 text-center">
+                <div class="col-lg-8 col-lg-offset-2">
+                <div class="text-center">
+                <h2>Contact</h2>
+                </div>
+                <br>
+                <p class="lead">Please don't hesitate to drop me a line if you are interested in: hiring me, having me help out on your project, or if you simply want to say hello!</p>
+                <div class="text-center">
+                <ul class="list-inline banner-social-buttons">
+                    <li>
+                        <a href="mailto:stephenjayyoung@gmail.com" class="btn btn-default btn-lg"><i class="fa fa-envelope fa-fw"></i> <span class="network-name">Email</span></a>
+                    </li>
+                </ul>
+                </div>
+                </div>
+            </div>
+        </div>    
+    </section>
+
+
+
+
+
+
+
+
+
+
+
+                <!-- <div class="col-lg-12 text-center">
                     <h2 class="section-heading"><a href="#"></a>Contact Me</h2>
                     <br>
-                    <!-- <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3> -->
                 </div>
             </div>
             <div class="row">
@@ -522,7 +549,7 @@
                             </div>
                         </div>
                     </form>
-                </div>
+                </div> -->
             </div>
         </div>
     </section>
