--- a/index.html
+++ b/index.html
@@ -109,11 +109,11 @@
                                 <i class="fa fa-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="img/Iceland.JPG" class="img-responsive" alt="">
+                        <img src="img/TheJbac.jpg" class="img-responsive" alt="">
                     </a>
                     <div class="portfolio-caption">
-                        <h4>Hello Iceland</h4>
-                        <p class="text-muted">Website documenting an Icelandic adventure</p>
+                        <h4>the Jbac</h4>
+                        <p class="text-muted">Website for the Jacuzzi Boys Athletic Club</p>
                     </div>
                 </div>
                 <div class="col-md-4 col-sm-6 portfolio-item">
@@ -123,11 +123,11 @@
                                 <i class="fa fa-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="img/TheJbac.jpg" class="img-responsive" alt="">
+                        <img src="img/Iceland.JPG" class="img-responsive" alt="">
                     </a>
                     <div class="portfolio-caption">
-                        <h4>the Jbac</h4>
-                        <p class="text-muted">Website for the Jacuzzi Boys Athletic Club</p>
+                        <h4>Hello Iceland</h4>
+                        <p class="text-muted">Website documenting an Icelandic adventure</p>
                     </div>
                 </div>
                 <div class="col-md-4 col-sm-6 portfolio-item">
@@ -172,7 +172,7 @@
                         <p class="text-muted">Website for Pettygrove Manufacturing (under construction)</p>
                     </div>
                 </div>
-                <div class="col-md-4 col-sm-6 portfolio-item">
+ <!--                <div class="col-md-4 col-sm-6 portfolio-item">
                     <a href="#portfolioModal6" class="portfolio-link" data-toggle="modal">
                         <div class="portfolio-hover">
                             <div class="portfolio-hover-content">
@@ -185,7 +185,7 @@
                         <h4>Lunch Finder</h4>
                         <p class="text-muted">Application that finds the top rated lunch spots in your vicinity</p>
                     </div>
-                </div>
+                </div> -->
             </div>
         </div>
     </section>
@@ -580,7 +580,7 @@
     <!-- Use the modals below to showcase details about your portfolio projects! -->
 
     <!-- Portfolio Modal 1 -->
-    <div class="portfolio-modal modal fade" id="portfolioModal1" tabindex="-1" role="dialog" aria-hidden="true">
+    <div class="portfolio-modal modal fade" id="portfolioModal2" tabindex="-1" role="dialog" aria-hidden="true">
         <div class="modal-content">
             <div class="close-modal" data-dismiss="modal">
                 <div class="lr">
@@ -609,7 +609,7 @@
     </div>
 
     <!-- Portfolio Modal 2 -->
-    <div class="portfolio-modal modal fade" id="portfolioModal2" tabindex="-1" role="dialog" aria-hidden="true">
+    <div class="portfolio-modal modal fade" id="portfolioModal1" tabindex="-1" role="dialog" aria-hidden="true">
         <div class="modal-content">
             <div class="close-modal" data-dismiss="modal">
                 <div class="lr">
