--- a/index.html
+++ b/index.html
@@ -470,7 +470,7 @@
                       <li>Collaborated with teaching staff to ensure that students were understanding concepts in a timely manner </li>
                     </ul>
                     <p><b><u>Young Creative Space</u></b>
-                    <p>Freelance Web Development (December 2014-August 2015)</p>
+                    <p>Freelance Web Development (December 2014-Present)</p>
                     <ul>
                       <li>Created websites and applications from the ground up</li>
                       <li>Manipulated API’s to display functionality from various social media sites </li>
