added new project to portfolio

--- a/index.html
+++ b/index.html
@@ -172,20 +172,20 @@
                         <p class="text-muted">Website for Pettygrove Manufacturing (under construction)</p>
                     </div>
                 </div>
- <!--                <div class="col-md-4 col-sm-6 portfolio-item">
+                <div class="col-md-4 col-sm-6 portfolio-item">
                     <a href="#portfolioModal6" class="portfolio-link" data-toggle="modal">
                         <div class="portfolio-hover">
                             <div class="portfolio-hover-content">
                                 <i class="fa fa-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="img/TacoPic.jpg" class="img-responsive" alt="">
+                        <img src="img/CodeCommunity.png" class="img-responsive" alt="">
                     </a>
                     <div class="portfolio-caption">
-                        <h4>Lunch Finder</h4>
-                        <p class="text-muted">Application that finds the top rated lunch spots in your vicinity</p>
+                        <h4>PDX Code Community</h4>
+                        <p class="text-muted">A Website for the PCS Code Community</p>
                     </div>
-                </div> -->
+                </div>
             </div>
         </div>
     </section>
@@ -729,11 +729,11 @@
                     <div class="col-lg-8 col-lg-offset-2">
                         <div class="modal-body">
                             <!-- Project Details Go Here -->
-                            <h2><a href="http://youngcreativespace.com/FourSquare-Lunchfinder/">Lunch Finder</a></h2>
-                            <a href="http://youngcreativespace.com/FourSquare-Lunchfinder/">
-                            <img class="img-responsive img-centered" src="img/TacoPic.jpg" alt=""></a>
-                            <p>This web based application uses Javascript and the FourSquare API to display the top rated lunch spots close to your current location.</p>
-                            <p><b>Check it out here:<a href="http://youngcreativespace.com/FourSquare-Lunchfinder/"> www.youngcreativespace.com/FourSquare-Lunchfinder/</b></a></p>
+                            <h2><a href="http://www.pdxcode.community">PDX Code Community</a></h2>
+                            <a href="http://www.pdxcode.community">
+                            <img class="img-responsive img-centered" src="img/CodeCommunity.png" alt=""></a>
+                            <p>This is a simple web site that utulizes a Bootstrap template and design work.</p>
+                            <p><b>Check it out here:<a href="http://www.pdxcode.community"> www.pdxcode.community</b></a></p>
                             <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close Project</button>
                         </div>
                     </div>
