--- a/index.html
+++ b/index.html
@@ -179,11 +179,11 @@
                                 <i class="fa fa-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="img/CodeCommunity.png" class="img-responsive" alt="">
+                        <img src="img/codeCommunity.png" class="img-responsive" alt="">
                     </a>
                     <div class="portfolio-caption">
                         <h4>PDX Code Community</h4>
-                        <p class="text-muted">A Website for the PCS Code Community</p>
+                        <p class="text-muted">A Website for the PDX Code Community</p>
                     </div>
                 </div>
             </div>
