--- a/index.html
+++ b/index.html
@@ -731,7 +731,7 @@
                             <!-- Project Details Go Here -->
                             <h2><a href="http://www.pdxcode.community">PDX Code Community</a></h2>
                             <a href="http://www.pdxcode.community">
-                            <img class="img-responsive img-centered" src="img/CodeCommunity.png" alt=""></a>
+                            <img class="img-responsive img-centered" src="img/codeCommunity.png" alt=""></a>
                             <p>This is a simple web site that utulizes a Bootstrap template and design work.</p>
                             <p><b>Check it out here:<a href="http://www.pdxcode.community"> www.pdxcode.community</b></a></p>
                             <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close Project</button>
